✅ test InMemoryPlayerUTest: Simplified